fix goland sdk changelog

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,9 @@
 2022-03-16 Version: v1.1.5
 - Update apis
 
+2021-12-17 Version: v1.1.4
+- Update apis
+
 2021-12-09 Version: v1.1.3
 - Update apis
 
